--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -45,4 +45,51 @@
     text-transform: capitalize;
     text-shadow: 3px 1px 0px #000000;
   }
-  
+  .mainreg {
+    clip-path: polygon(0 0, 100% 0, 100% 20%, 97% 30%,97% 70%,100% 80%, 100% 100%, 5% 100%,0% 80%);
+    font-family: 'Chakra Petch';
+    position: absolute;
+    top: 250px;
+    left: 170px;
+    /*font-weight: 900;*/
+    text-shadow: none;
+    font-weight: bolder;
+    color: black;
+    background-color:#00ffed;
+    text-align: center;
+    font-size: 2.5rem;
+    padding: 0 1.5rem;
+    padding-top: 0.75rem;
+    padding-bottom: 0.75rem;
+    letter-spacing: -0.05rem;
+    tracking: 0.8;
+    border: 1px solid #333;
+    margin-top: 0.5rem;
+    lg:mt-20;
+  }
+  .mainregpinkbg {
+    clip-path: polygon(0 0, 100% 0, 100% 20%, 97% 30%,97% 70%,100% 80%, 100% 100%, 5% 100%,0% 80%);
+    font-family: 'Chakra Petch';
+    position: absolute;
+    top: 258px;
+    left: 162px;
+    z-index: -1;
+    /*font-weight: 900;*/
+    text-shadow: none;
+    font-weight: bolder;
+    color: black;
+    background-color:#eb0194;
+    text-align: center;
+    font-size: 2.5rem;
+    padding: 0 1.5rem;
+    padding-top: 0.75rem;
+    padding-bottom: 0.75rem;
+    letter-spacing: -0.05rem;
+    tracking: 0.8;
+    border: 1px solid #333;
+    margin-top: 0.5rem;
+    lg:mt-20;
+  }
+  a{
+    cursor: pointer;;
+  }
