--- a/src/styles/ConductedBy/index.css
+++ b/src/styles/ConductedBy/index.css
@@ -19,10 +19,14 @@
     width: 400px;
 }
 .IIC-logo-inner{
-    margin-top: 70px;
-    width: 600px;
+    margin-top: 100px;
+    width: 650px;
 }
 .G20-logo-inner{
     margin-left: 110px;
     width: 400px;
+}
+.axure-logo-inner{
+    margin-top: 70px;
+    width: 500px;
 }
