--- a/src/styles/Tracks/TracksCard.css
+++ b/src/styles/Tracks/TracksCard.css
@@ -1,61 +1,90 @@
-.card{
-    width: 45vmin;
-    height: 35vmin;
-    position: relative;
+.card {
+  flex-basis: 24vmax;
+  width: 11rem;
+  height: 20.5vmax;
+  position: relative;
+  margin: 5% 3%;
+  /* background: #000917 !important;  */
+  background: #00ffed !important;
+  clip-path: polygon(0% 0%, 80% 0%, 100% 20%, 100% 100%, 20% 100%, 0% 80%);
+}
+
+.card_top {
+  position: absolute;
+  top: 2px;
+  left: 2px;
+  right: 2px;
+  bottom: 2px;
+  background: #000917;
+  clip-path: polygon(0% 0%, 80% 0%, 100% 20%, 100% 100%, 20% 100%, 0% 80%);
+}
+
+.card_heading {
+  width: 63%;
+  margin: auto;
+  padding: 5%;
+  font-family: 'Chakra Petch';
+  font-style: normal;
+  font-weight: 600;
+  font-size: 1.7vw;
+  line-height: 1.7vw;
+  text-align: center;
+  letter-spacing: 0.05em;
+  text-transform: uppercase;
+  color: #00ffed;
+}
+
+.card_summary {
+  font-family: 'Chakra Petch';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 1.1vw;
+  line-height: 120%;
+  color: #ffffff;
+  padding: 0% 12%;
+  display: flex;
+  text-align: justify;
+}
+
+@media screen and (max-width: 1024px) {
+  .card_heading {
+    font-size: 2.25vmax;
+    line-height: 2.2vmax;
+  }
+
+  .card_summary {
+    font-size: 1.7vmax;
+  }
+
+  .card {
+    flex-basis: 38vmax;
+    height: 30vmax;
+    margin: 5% 0%;
+  }
+}
+@media screen and (max-width: 720px) {
+  .card_heading {
+    font-size: 2.5vmax;
+    line-height: 2.5vmax;
+  }
+
+  .card_summary {
+    font-size: 1.9vmax;
+  }
+
+  .card {
+    flex-basis: 40vmax;
+    width: 20rem;
+    height: 19rem;
     margin: 5% 2%;
-    /* background: #000917 !important;  */
-    background: #00FFED !important; 
-    clip-path: polygon(
-        0% 0%,
-        80% 0%, 
-        100% 20%, 
-        100% 100%, 
-        20% 100%,
-        0% 80%
-    );
-}
+  }
 
-.card_top{
-    position: absolute;
-    top: 2px;
-    left: 2px;
-    right: 2px;
-    bottom: 2px;
-    background: #000917; 
-    clip-path: polygon(
-        0% 0%,
-        80% 0%, 
-        100% 20%, 
-        100% 100%, 
-        20% 100%,
-        0% 80%
-    );
-}
+  .heading_outer {
+    height: 6vmax !important;
+    width: calc(37vmax) !important;
+  }
 
-.card_heading{
-    width: 70%;
-    margin: auto;
-    padding: 5%;
-    font-family: 'Chakra Petch';
-    font-style: normal;
-    font-weight: 600;
-    font-size: 150%;
-    line-height: 26px;
-    text-align: center;
-    letter-spacing: 0.05em;
-    text-transform: uppercase;
-    color: #00FFED; 
-}
-
-.card_summary{
-    font-family: 'Chakra Petch';
-    font-style: normal;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 120%;
-    color: #FFFFFF;
-    padding: 5% 12%;
-    display: flex;
-    text-align: justify;
-
+  .heading {
+    font-size: 3vmax !important;
+  }
 }
