--- a/src/styles/ConductedBy.css
+++ b/src/styles/ConductedBy.css
@@ -1,53 +1,72 @@
 .cb-svg {
-    margin-left: 50vw;
-    margin-top: -90px;
+  margin-left: 45vw;
+  margin-top: -90px;
 }
 
 .cb-no-path {
-    opacity: 0.2;
-} 
+  opacity: 0.2;
+}
 
 .cb-path {
-    stroke-dasharray: 2000;
-    stroke-dashoffset: 2000;
-    animation: cb-dash 12s linear forwards;
+  stroke-dasharray: 2000;
+  stroke-dashoffset: 2000;
+  animation: cb-dash 12s linear forwards;
 }
-  
+
 @keyframes cb-dash {
-    to {
-        stroke-dashoffset: 0;
-    }
+  to {
+    stroke-dashoffset: 0;
+  }
 }
 
 .cb2-svg {
-    margin-left: 7vw;
-    margin-top: -36px;
-    z-index: -2;
-    overflow-x: hidden;
+  /* margin-left: 7vw; */
+  margin-top: -36px;
+  margin-bottom: -70%;
+  z-index: -2;
+  overflow-x: hidden;
 }
 
 .cb2-no-path {
-    opacity: 0.2;
-} 
+  opacity: 0.2;
+}
 
 .cb2-path {
-    stroke-dasharray: 3000;
-    stroke-dashoffset: 3000;
-    animation: cb-dash2 7s linear forwards;
+  stroke-dasharray: 2784;
+  stroke-dashoffset: 3000;
+  animation: cb-dash2 7s linear forwards;
 }
-  
+
 @keyframes cb-dash2 {
-    to {
-        stroke-dashoffset: 0;
-    }
+  to {
+    stroke-dashoffset: 0;
+  }
 }
 
 .SITE-logo {
-    margin-top: -780px;
-    margin-bottom: 80px;
+  width: 100%;
+  margin-top: 10px;
+  margin-bottom: calc(10.5vw - 38px);
+}
+.SITE-logo-inner {
+  width: 35vw;
 }
 
 .other-logos {
-    margin-top: 130px;
-    margin-bottom: 120px;
+  margin-top: 13vw;
+  margin-bottom: calc(13vw - 155px);
+}
+
+@media only screen and (max-width: 1300px) {
+  /* .cb2-svg {
+    display: none;
+  } */
+
+  /* .ab-hack-svg {
+    display: none;
+  } */
+
+  .card-top {
+    position: relative;
+  }
 }
