--- a/src/styles/Heading/heading.css
+++ b/src/styles/Heading/heading.css
@@ -1,61 +1,70 @@
-.heading_outer{
-    margin: auto;
-    color: white;
-    width: 45vmin;
-    height: 8vmin;
-    position: relative;
-    background: #00FFED !important; 
-    clip-path: polygon(
-        0% 0%,
-        100% 0%, 
-        100% 20%, 
-        95% 25%, 
-        95% 75%,
-        100% 80%,
-        100% 100%,
-        0% 100%,
-        0% 80%, 
-        5% 75%, 
-        5% 25%, 
-        0% 20%,
-        0% 0%
-    );
+.heading_outer {
+  margin: auto;
+  color: white;
+  width: 45vmin;
+  height: 8vmin;
+  position: relative;
+  background: #00ffed !important;
+  clip-path: polygon(
+    0% 0%,
+    100% 0%,
+    100% 20%,
+    95% 25%,
+    95% 75%,
+    100% 80%,
+    100% 100%,
+    0% 100%,
+    0% 80%,
+    5% 75%,
+    5% 25%,
+    0% 20%,
+    0% 0%
+  );
 }
 
-.heading_inner{
-    position: absolute;
-    top: 2px;
-    left: 2px;
-    right: 5px;
-    bottom: 5px;
-    background: #000917; 
-    clip-path: polygon(
-        0% 0%,
-        100% 0%, 
-        100% 20%, 
-        95% 25%, 
-        95% 75%,
-        100% 80%,
-        100% 100%,
-        0% 100%,
-        0% 80%, 
-        5% 75%, 
-        5% 25%, 
-        0% 20%,
-        0% 0%
-    );
+.heading_inner {
+  position: absolute;
+  top: 2px;
+  left: 2px;
+  right: 5px;
+  bottom: 5px;
+  background: #000917;
+  clip-path: polygon(
+    0% 0%,
+    100% 0%,
+    100% 20%,
+    95% 25%,
+    95% 75%,
+    100% 80%,
+    100% 100%,
+    0% 100%,
+    0% 80%,
+    5% 75%,
+    5% 25%,
+    0% 20%,
+    0% 0%
+  );
 }
 
-.heading{
-    font-family: 'Jx Tabe DEMO';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 200%;
-    line-height: 35px;
-    letter-spacing: 0.05em;
-    text-transform: uppercase;
-    color: #FF009E;
-    margin: 5% 0%;
-    display: flex;
-    justify-content: center;
+.heading {
+  font-family: 'Jx Tabe DEMO';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 4vmin;
+  line-height: 35px;
+  letter-spacing: 0.05em;
+  text-transform: uppercase;
+  color: #ff009e;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+}
+
+@media screen and (max-width: 1280px) {
+  .heading_outer {
+    margin-top: 10%;
+    margin-bottom: 10%;
+  }
 }
