--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -1,95 +1,114 @@
 .container {
-    position: relative;
-    width: 100%;
-    height: 100vh;
-    overflow: hidden;
-  }
-  
-  .backgroundImage {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-position: center bottom;
-    background-repeat: repeat-x;
-    filter: brightness(100%);
-  }
-  
-  .textContainer {
-    position: absolute;
-    top: 40%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
-    color: #fff;
-    text-shadow:0px 0px 0px 4px #000000;
-  }
-  
-  .title {
-    font-family: "Jx Tabe Demo";
-    font-size: 6rem;
-    margin-bottom: 1rem;
-    font-weight: 400;
-    letter-spacing: 0.02em;
-    line-height: 6rem;
-    /* border: 3px solid #FF009E; */
-    
-  }
-  
-  .subtitle {
-    font-family: 'Chakra Petch';
-    font-size: 1.5rem;
-    letter-spacing: 0.05em;
-    font-weight: 700;
-    text-transform: capitalize;
-    text-shadow: 3px 1px 0px #000000;
-  }
-  .mainreg {
-    clip-path: polygon(0 0, 100% 0, 100% 20%, 97% 30%,97% 70%,100% 80%, 100% 100%, 5% 100%,0% 80%);
-    font-family: 'Chakra Petch';
-    position: absolute;
-    top: 250px;
-    left: 170px;
-    /*font-weight: 900;*/
-    text-shadow: none;
-    font-weight: bolder;
-    color: black;
-    background-color:#00ffed;
-    text-align: center;
-    font-size: 2.5rem;
-    padding: 0 1.5rem;
-    padding-top: 0.75rem;
-    padding-bottom: 0.75rem;
-    letter-spacing: -0.05rem;
-    tracking: 0.8;
-    border: 1px solid #333;
-    margin-top: 0.5rem;
-    lg:mt-20;
-  }
-  .mainregpinkbg {
-    clip-path: polygon(0 0, 100% 0, 100% 20%, 97% 30%,97% 70%,100% 80%, 100% 100%, 5% 100%,0% 80%);
-    font-family: 'Chakra Petch';
-    position: absolute;
-    top: 258px;
-    left: 162px;
-    z-index: -1;
-    /*font-weight: 900;*/
-    text-shadow: none;
-    font-weight: bolder;
-    color: black;
-    background-color:#eb0194;
-    text-align: center;
-    font-size: 2.5rem;
-    padding: 0 1.5rem;
-    padding-top: 0.75rem;
-    padding-bottom: 0.75rem;
-    letter-spacing: -0.05rem;
-    tracking: 0.8;
-    border: 1px solid #333;
-    margin-top: 0.5rem;
-    lg:mt-20;
-  }
-  a{
-    cursor: pointer;;
-  }
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  overflow: hidden;
+}
+
+.backgroundImage {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-position: center bottom;
+  background-repeat: repeat-x;
+  filter: brightness(100%);
+}
+
+.textContainer {
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  color: #fff;
+  text-shadow: 0px 0px 0px 4px #000000;
+}
+
+.title {
+  font-family: 'Jx Tabe Demo';
+  font-size: 6rem;
+  margin-bottom: 1rem;
+  font-weight: 400;
+  letter-spacing: 0.02em;
+  line-height: 6rem;
+  /* border: 3px solid #FF009E; */
+}
+
+.subtitle {
+  font-family: 'Chakra Petch';
+  font-size: 1.5rem;
+  letter-spacing: 0.05em;
+  font-weight: 700;
+  text-transform: capitalize;
+  text-shadow: 3px 1px 0px #000000;
+}
+.mainreg {
+  clip-path: polygon(
+    0 0,
+    100% 0,
+    100% 20%,
+    97% 30%,
+    97% 70%,
+    100% 80%,
+    100% 100%,
+    5% 100%,
+    0% 80%
+  );
+  font-family: 'Chakra Petch';
+  position: absolute;
+  top: 250px;
+  left: 170px;
+  /*font-weight: 900;*/
+  text-shadow: none;
+  font-weight: bolder;
+  color: black;
+  background-color: #00ffed;
+  text-align: center;
+  font-size: 2.5rem;
+  padding: 0 1.5rem;
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+  letter-spacing: -0.05rem;
+  tracking: 0.8;
+  border: 1px solid #333;
+  margin-top: 0.5rem;
+  lg: mt-20;
+}
+.mainregpinkbg {
+  clip-path: polygon(
+    0 0,
+    100% 0,
+    100% 20%,
+    97% 30%,
+    97% 70%,
+    100% 80%,
+    100% 100%,
+    5% 100%,
+    0% 80%
+  );
+  font-family: 'Chakra Petch';
+  position: absolute;
+  top: 258px;
+  left: 162px;
+  z-index: -1;
+  /*font-weight: 900;*/
+  text-shadow: none;
+  font-weight: bolder;
+  color: black;
+  background-color: #eb0194;
+  text-align: center;
+  font-size: 2.5rem;
+  padding: 0 1.5rem;
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+  letter-spacing: -0.05rem;
+  tracking: 0.8;
+  border: 1px solid #333;
+  margin-top: 0.5rem;
+  lg: mt-20;
+}
+a {
+  cursor: pointer;
+}
