--- a/src/styles/Tracks.css
+++ b/src/styles/Tracks.css
@@ -1,28 +1,30 @@
 .track-svg {
-    margin: auto;
-    margin-top: -2px;
+  margin: auto;
+  margin-top: -2px;
+  width: 59vw;
+  margin-bottom: -44%;
 }
 
 .track-no-path {
-    opacity: 0.2;
-} 
+  opacity: 0.2;
+}
 
 .track-path {
-    stroke-dasharray: 2000;
-    stroke-dashoffset: 2000;
-    animation: track-dash 20s linear forwards;
+  stroke-dasharray: 2000;
+  stroke-dashoffset: 2000;
+  animation: track-dash 20s linear forwards;
 }
-  
+
 @keyframes track-dash {
-    to {
-        stroke-dashoffset: 0;
-    }
+  to {
+    stroke-dashoffset: 0;
+  }
 }
 
 .track-body {
-    margin-top: -30px;
+  margin-top: -50px;
 }
 
 .tracks_div {
-    margin-top: -690px
+  /* margin-top: -690px; */
 }
