--- a/src/styles/ConductedBy/index.css
+++ b/src/styles/ConductedBy/index.css
@@ -26,10 +26,20 @@
   width: 400px;
 }
 .axure-logo-inner {
-  margin-top: 70px;
+  margin-top: 90px;
   width: 500px;
 }
-
+.spon-logo-inner{
+  width: 350px;
+  margin-top: 0px;
+  height:80px;
+}
+@media screen and (min-width: 761px){
+  .axure-logo-inner {
+    margin-bottom: 90px;
+    width: 500px;
+  }
+}
 @media screen and (max-width: 760px) {
   .other-logos{
     display: flex;
@@ -52,6 +62,11 @@
   .axure-logo-inner {
     margin-top: 0px;
     width: 200px;
-    margin-bottom: 80px;
+    margin-bottom: 20px;
+  }
+  .spon-logo-inner{
+    width: 150px;
+    margin-top: 0px;
+    height:95px;
   }
 }
