--- a/src/styles/ConductedBy/index.css
+++ b/src/styles/ConductedBy/index.css
@@ -40,11 +40,35 @@
   width: 300px;
   margin-top: 0px;
   height: 80px;
+
+}
+.pizzahut-logo-inner{
+  width: 270px;
+  margin-top: 120px;
+  margin-left: 45px;
+  height: 120px;
+}
+@media screen and (max-width: 1300px){
+  .pizzahut-logo-inner{
+    width: 300px;
+    margin-top: 100px;
+    margin-left: 40px;
+    height: 130px;
+  }
+}
+@media screen and (max-width: 1050px){
+  .pizzahut-logo-inner{
+    width: 280px;
+    margin-top: 100px;
+    margin-left: 20px;
+    height: 80px;
+  }
 }
 @media screen and (min-width: 761px) {
   .axure-logo-inner {
     margin-bottom: 90px;
     width: 500px;
+
   }
 }
 @media screen and (max-width: 760px) {
@@ -74,5 +98,12 @@
     width: 150px;
     margin-top: 0px;
     height: 95px;
+  }
+  .pizzahut-logo-inner{
+    width: 180px;
+    margin-top: 30px;
+    height: 135px;
+    margin-left: 0px;
+
   }
 }
